ros2_ws/log/build_2025-03-10_15-14-12/webcam/stderr.log
  File "/home/crofi/ros2_ws/install/webcam/lib/python3.10/site-packages/webcam/webcam.py", line 1
    mport rclpy
          ^^^^^
SyntaxError: invalid syntax

